--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Formulário de Cadastro</title>
+  <title>Tenta a sorte!</title>
 </head>
 <body>
   <h1>Formulário de Cadastro</h1>
